--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-svg": "^9.12.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-svg-transformer": "^0.13.0"
   },
   "devDependencies": {
