--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "date-fns": "^2.25.0",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-month-year-picker": "^1.8.0",
     "react-native-pager-view": "^5.2.1",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
