--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.64.2",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-crop-picker": "^0.36.4",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-month-year-picker": "^1.8.0",
     "react-native-pager-view": "^5.2.1",
@@ -30,7 +31,8 @@
     "react-native-svg-charts": "^5.4.0",
     "react-native-svg-transformer": "^0.13.0",
     "react-native-tab-view": "^3.0.1",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
