--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "firebase": "8.2.3",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-animatable": "^1.3.3",
