--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-month-year-picker": "^1.8.0",
     "react-native-pager-view": "^5.2.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
